# RMB-Denomination-Recognition-System

./: .gitignore  .gitignore.bckp  LICENSE  README.md  efficientnet_v2.py  feature_extractor.pkl  pyproject.toml  qt_camera.py  rmb_classifier.py  rmb_live_classifier.py  test_pyqt6.py  try-camear.py  图像算法分析报告.md  框架搭建.md  项目介绍报告.docx  项目介绍报告.md
test/: try-tensorflow.py
windows/: AGENTS.md  get_rmb_dataset.ps1  rmb_classifier.py  rmb_live_classifier.py  try-camear.py
