[project]
name = "rmb-denomination-recognition-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow>=2.0.0",
    "scikit-learn>=1.7.2",
    "pyqt-fluent-widgets>=1.11.2",
    "opencv-python>=4.12.0.88",
]
